# FreeML

./: .gitignore  CMakeLists.txt  README.md
private/: MLI_ComputeEngine.c  MLI_ComputeEngine.h  MLI_Fwd.h  MLI_Instance.c  MLI_Instance.h  MLI_Log.h  MLI_LogicalDevice.c  MLI_LogicalDevice.h  MLI_Macro.h  MLI_PhysicalDevice.c  MLI_PhysicalDevice.h  MLI_Queue.c  MLI_Queue.h  ML_ComputeEngine.c
public/: ML_ComputeEngine.h  ML_Macro.h  ML_Result.h
tests/: CMakeLists.txt
tests/compute/: compute.test.c
tests/shaders/: shader.comp
